src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Client_Requested_Communication_Interval__c</fullName>
        <label>Client Requested Communication Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly (default)</fullName>
                    <default>true</default>
                    <label>Monthly (default)</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Start_Date__c</fullName>
        <label>Client Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Time_Saved__c</fullName>
        <label>Client Time Saved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_To__c</fullName>
        <label>Connected To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Business Team</fullName>
                </value>
                <value>
                    <fullName>Aviation Employee</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Client Family Member</fullName>
                </value>
                <value>
                    <fullName>Client Friend</fullName>
                </value>
                <value>
                    <fullName>Client - Spouse</fullName>
                </value>
                <value>
                    <fullName>Client Team Member</fullName>
                </value>
                <value>
                    <fullName>Former Aviation Employee</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Inactive Client</fullName>
                </value>
                <value>
                    <fullName>Inactive Client Team Member</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Prospect Team Member</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
                <value>
                    <fullName>Semi-Active Client</fullName>
                </value>
                <value>
                    <fullName>Travel Reporter</fullName>
                </value>
                <value>
                    <fullName>Unknown - Lead Passenger Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_2__c</fullName>
        <label>Contract # 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_3__c</fullName>
        <label>Contract # 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_4__c</fullName>
        <label>Contract # 4</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_2__c</fullName>
        <label>Contract Start Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_3__c</fullName>
        <label>Contract Start Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_4__c</fullName>
        <label>Contract Start Date #4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Craig_s_Call_Calendar__c</fullName>
        <label>Craig&apos;s Call Calendar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Aviation_Provider_s_2__c</fullName>
        <label>CURRENT AVIATION PROVIDER(S) #2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Aircraft Services Group</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>Cinco Air Charter</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>Dumont Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Gama Charters</fullName>
                </value>
                <value>
                    <fullName>Hop-A-Jet</fullName>
                </value>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Jet Aviation</fullName>
                </value>
                <value>
                    <fullName>Jet Edge International</fullName>
                </value>
                <value>
                    <fullName>Jet Linx</fullName>
                </value>
                <value>
                    <fullName>Jet Methods</fullName>
                </value>
                <value>
                    <fullName>JetSelect</fullName>
                </value>
                <value>
                    <fullName>Jet Source</fullName>
                </value>
                <value>
                    <fullName>JetSuite</fullName>
                </value>
                <value>
                    <fullName>JFI (JetFlite International)</fullName>
                </value>
                <value>
                    <fullName>Kalitta Charters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Aviation_Provider_s_3__c</fullName>
        <label>CURRENT AVIATION PROVIDER(S) #3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Aircraft Services Group</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>Cinco Air Charter</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>Dumont Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Gama Charters</fullName>
                </value>
                <value>
                    <fullName>Hop-A-Jet</fullName>
                </value>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Jet Aviation</fullName>
                </value>
                <value>
                    <fullName>Jet Edge International</fullName>
                </value>
                <value>
                    <fullName>Jet Linx</fullName>
                </value>
                <value>
                    <fullName>Jet Methods</fullName>
                </value>
                <value>
                    <fullName>Jets.com</fullName>
                </value>
                <value>
                    <fullName>JetSelect</fullName>
                </value>
                <value>
                    <fullName>Jet Source</fullName>
                </value>
                <value>
                    <fullName>JetSuite</fullName>
                </value>
                <value>
                    <fullName>JFI (JetFlite International)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Aviation_Provider_s__c</fullName>
        <label>CURRENT AVIATION PROVIDER(S)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Aircraft Services Group</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>Cinco Air Charter</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>Dumont Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Gama Charters</fullName>
                </value>
                <value>
                    <fullName>Hop-A-Jet</fullName>
                </value>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Jet Aviation</fullName>
                </value>
                <value>
                    <fullName>Jet Edge International</fullName>
                </value>
                <value>
                    <fullName>Jet Linx</fullName>
                </value>
                <value>
                    <fullName>Jet Methods</fullName>
                </value>
                <value>
                    <fullName>JetSelect</fullName>
                </value>
                <value>
                    <fullName>Jet Source</fullName>
                </value>
                <value>
                    <fullName>JetSuite</fullName>
                </value>
                <value>
                    <fullName>JFI (JetFlite International)</fullName>
                </value>
                <value>
                    <fullName>Kalitta Charters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Hourly_Rate__c</fullName>
        <label>Current Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MMF_2__c</fullName>
        <label>Current MMF #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MMF_3__c</fullName>
        <label>Current MMF #3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MMF_4__c</fullName>
        <label>Current MMF #4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MMF__c</fullName>
        <label>Current MMF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <label>Current Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Program_2__c</fullName>
        <label>Current Program #2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clay Lacy ETP</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets Card</fullName>
                </value>
                <value>
                    <fullName>Dreamline-Great Circle</fullName>
                </value>
                <value>
                    <fullName>EJM Debit</fullName>
                </value>
                <value>
                    <fullName>FlexJet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>FlexJet Fractional</fullName>
                </value>
                <value>
                    <fullName>FlexJet Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Flight Options Fractional</fullName>
                </value>
                <value>
                    <fullName>Flight Options Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options Membership</fullName>
                </value>
                <value>
                    <fullName>Flight Solutions Program (FSP)</fullName>
                </value>
                <value>
                    <fullName>Jets.com Card</fullName>
                </value>
                <value>
                    <fullName>JetSuite 100k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 200k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 400k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 50k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite Charter</fullName>
                </value>
                <value>
                    <fullName>Magellan Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 50 Hour Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Card (Europe)</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional</fullName>
                </value>
                <value>
                    <fullName>NetJets Lease</fullName>
                </value>
                <value>
                    <fullName>PlaneSense Fractional</fullName>
                </value>
                <value>
                    <fullName>Sentient 75k Jet Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Select Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Select Hours Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Program_3__c</fullName>
        <label>Current Program #3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clay Lacy ETP</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets Card</fullName>
                </value>
                <value>
                    <fullName>Dreamline-Great Circle</fullName>
                </value>
                <value>
                    <fullName>EJM Debit</fullName>
                </value>
                <value>
                    <fullName>FlexJet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>FlexJet Fractional</fullName>
                </value>
                <value>
                    <fullName>FlexJet Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Flight Options Fractional</fullName>
                </value>
                <value>
                    <fullName>Flight Options Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options Membership</fullName>
                </value>
                <value>
                    <fullName>Flight Solutions Program (FSP)</fullName>
                </value>
                <value>
                    <fullName>Jets.com Card</fullName>
                </value>
                <value>
                    <fullName>JetSuite 100k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 200k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 400k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 50k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite Charter</fullName>
                </value>
                <value>
                    <fullName>Magellan Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 50 Hour Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Card (Europe)</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional</fullName>
                </value>
                <value>
                    <fullName>NetJets Lease</fullName>
                </value>
                <value>
                    <fullName>PlaneSense Fractional</fullName>
                </value>
                <value>
                    <fullName>Sentient 75k Jet Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Select Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Select Hours Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Program_4__c</fullName>
        <label>Current Program #4</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clay Lacy ETP</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets Card</fullName>
                </value>
                <value>
                    <fullName>Dreamline-Great Circle</fullName>
                </value>
                <value>
                    <fullName>EJM Debit</fullName>
                </value>
                <value>
                    <fullName>FlexJet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>FlexJet Fractional</fullName>
                </value>
                <value>
                    <fullName>FlexJet Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Flight Options Fractional</fullName>
                </value>
                <value>
                    <fullName>Flight Options Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options Membership</fullName>
                </value>
                <value>
                    <fullName>Flight Solutions Program (FSP)</fullName>
                </value>
                <value>
                    <fullName>Jets.com Card</fullName>
                </value>
                <value>
                    <fullName>JetSuite 100k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 200k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 400k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 50k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite Charter</fullName>
                </value>
                <value>
                    <fullName>Magellan Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 50 Hour Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Card (Europe)</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional</fullName>
                </value>
                <value>
                    <fullName>NetJets Lease</fullName>
                </value>
                <value>
                    <fullName>PlaneSense Fractional</fullName>
                </value>
                <value>
                    <fullName>Sentient 75k Jet Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Heavy-Select Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Preferred Hours Card</fullName>
                </value>
                <value>
                    <fullName>Sentient Light-Select Hours Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Program_Notes_2__c</fullName>
        <label>Current Program Notes #2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Program_Notes_3__c</fullName>
        <label>Current Program Notes #3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Program_Notes_4__c</fullName>
        <label>Current Program Notes #4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Program_Notes__c</fullName>
        <label>Current Program Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Citation Air Charter</fullName>
                </value>
                <value>
                    <fullName>Citation Air Debit Card</fullName>
                </value>
                <value>
                    <fullName>Citation Air Fractional</fullName>
                </value>
                <value>
                    <fullName>Citation Air Lease (Jet Access)</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy ETP</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets Card</fullName>
                </value>
                <value>
                    <fullName>Dreamline-Great Circle</fullName>
                </value>
                <value>
                    <fullName>EJM Debit</fullName>
                </value>
                <value>
                    <fullName>FlexJet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>FlexJet Fractional</fullName>
                </value>
                <value>
                    <fullName>FlexJet Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Flight Options Fractional</fullName>
                </value>
                <value>
                    <fullName>Flight Options Lease</fullName>
                </value>
                <value>
                    <fullName>Flight Options Membership</fullName>
                </value>
                <value>
                    <fullName>Flight Solutions Program (FSP)</fullName>
                </value>
                <value>
                    <fullName>Jets.com Card</fullName>
                </value>
                <value>
                    <fullName>JetSuite 100k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 200k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 400k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite 50k Membership</fullName>
                </value>
                <value>
                    <fullName>JetSuite Charter</fullName>
                </value>
                <value>
                    <fullName>Magellan Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 12.5 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 25 Hour Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Jet 50 Hour Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Card (Europe)</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional</fullName>
                </value>
                <value>
                    <fullName>NetJets Lease</fullName>
                </value>
                <value>
                    <fullName>PlaneSense Fractional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Hourly_Rate_2__c</fullName>
        <label>Currently Hourly Rate #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Hourly_Rate_3__c</fullName>
        <label>Currently Hourly Rate #3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Hourly_Rate_4__c</fullName>
        <label>Currently Hourly Rate #4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dans_Call_Calendar__c</fullName>
        <label>Dan&apos;s Call Calendar</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Report_Sent__c</fullName>
        <label>Date Last Report Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_2__c</fullName>
        <label>Deposit Amount #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_3__c</fullName>
        <label>Deposit Amount #3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>